--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+
 <html>
+
+    <head>
+
+        <title> My Portfolio Project </title>
+
+    </head>
+
+    <body>
+
+        <h1> This is a Heading. </h1>
+
+        <p> This is a paragraph. </p>
+
+        <Div> This is a new div tag. </Div>
+
+    </body>
 
 </html>
